# fleet-management

./: .gitignore  .gitmodules
client/: CMakeLists.txt
client/apps/: commandAgentApp.cxx  multiCommandAgentApp.cxx
client/include/agent/: agent_abstract.hpp  command_agent.hpp
client/src/: agent_abstract.cpp  command_agent.cpp
client/test/apps/: clientTestApp.cxx
docs/: README.md  activity.drawio  design.drawio  implementation.drawio
server/: Cargo.toml
server/command_service/: Cargo.toml  Dockerfile
server/command_service/src/: main.rs
server/fleet_manager_service/: .gitignore  Cargo.toml  Makefile  dockerfile
server/fleet_manager_service/src/: handler.rs  main.rs  ws.rs
