[package]
name = "fleet_management_test_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
realease = "cargo build --release"
